
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int huffBitPos ;

int Huff_GetBit( unsigned char *buffer ) {
 int bit;

 bit = buffer[huffBitPos >> 3] >> (huffBitPos & 7);
 huffBitPos++;

 return (bit & 1);
}
